Fix HistogramSlider hidden by search bar in mobile

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -19,7 +19,7 @@
     }
 
     .basemap-height-mobile {
-      height: 80vh
+      height: 70vh
     }
 
     .basemap-height-sm {
